--- a/emails/welcome.html
+++ b/emails/welcome.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  </head>
 
-<head>
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-</head>
-
-<body>
+  <body>
     <div class="content">
-        <h5>Dear valued customer</h5>
-        <p>Welcome to the Fruits store, we're glad to have you. 🎉🙏</p>
-        <p>Fruits store Administrator</p>
+      <h5>Dear valued customer</h5>
+      <p>Welcome to the Fruits store, we're glad to have you. 🎉🙏</p>
+      <p>Fruits store Administrator</p>
     </div>
-</body>
-
+  </body>
 </html>
